--- a/Task4.html
+++ b/Task4.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html>
-
 	<head>
 		<title>PAGE FOR TASK 4</title>
 		<meta charset="UTF-8">
 		<style>
-			.ac{
+			.align-center{
 				text-align: center;
 			}
 		</style>
 	</head>
 
 	<body>
-		<h1 class="ac">Task 4</h1>
+		<h1 class="align-center">Task 4</h1>
 		<hr/>
 		<a href="Task1.html">Task #1</a>
 		<br/>
@@ -24,5 +23,4 @@
 		<br/>
 		<a href="http://gmail.com" target="_blank">Site of gmail in new blank</a>
 	</body>
-
 </html>
