--- a/Task1.html
+++ b/Task1.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 	<head>
 		<title>PAGE FOR TASK 1</title>
 		<meta charset="UTF-8">
@@ -11,25 +10,34 @@
 			.linethrough{
 				text-decoration: line-through;
 			}
-			.ac{
+			.align-center{
 				text-align: center;
 			}
-			.ar{
+			.align-right{
 				text-align: right;
-			}
-			.ad{
-				text-align: justify;
 			}
 		</style>
 	</head>
 	
 	<body>
-		<h1 class="ac">TASK 1</h1>
+		<h1 class="align-center">TASK 1</h1>
 		<hr/>
-		<p>It's a text, that I've prepared for Task-1. This sentence is used for example of <strong>bold</strong> style of words. This sentence is used for example of <em>curve</em> style of words. This sentence is used for example of <a class="underline">underlined</a> style of words. And this sentence is used for example of <a class="linethrough">NOT</a> linedthrough style of words.<p>
-		<p class="ar">It's a text, which I've also prepared for Task-1, but here will be the second part of the task. Here will be shown how to do text align to the right side. It's a text, which I've also prepared for Task-1, but here will be the second part of the task. Here will be shown how to do text align to the right side. It's a text, which I've also prepared for Task-1, but here will be the second part of the task. Here will be shown how to do text align to the right side.</p>
-		<p class="ac">It's a text, which I've also prepared for Task-1, but here will be the third part of the task. Here will be shown how to do text align to the center. It's a text, which I've also prepared for Task-1, but here will be the third part of the task. Here will be shown how to do text align to the center. It's a text, which I've also prepared for Task-1, but here will be the third part of the task. Here will be shown how to do text align to the center.</p>
-		<p align="justify">It's a text, which I've also prepared for Task-1, but here will be the fourth part of the task. Here will be shown how to do text align to the left and right sides at one time. I've written here some text only to use more words. It's a text, which I've also prepared for Task-1, but here will be the fourth part of the task. Here will be shown how to do text align to the left and right sides at one time. I've written here some text only to use more words. It's a text, which I've also prepared for Task-1, but here will be the fourth part of the task. Here will be shown how to do text align to the left and right sides at one time. I've written here some text only to use more words.</p>
+		<p>It's a text, that I've prepared for Task-1. This sentence is used for example of <strong>bold</strong> style of words. This sentence is used 
+		for example of <em>curve</em> style of words. This sentence is used for example of <a class="underline">underlined</a> style of words. And this 
+		sentence is used for example of <a class="linethrough">NOT</a> linedthrough style of words.</p>
+		<p class="align-right">It's a text, which I've also prepared for Task-1, but here will be the second part of the task. Here will be shown how 
+		to do text align to the right side. It's a text, which I've also prepared for Task-1, but here will be the second part of the task. Here will be
+		shown how to do text align to the right side. It's a text, which I've also prepared for Task-1, but here will be the second part of the task. 
+		Here will be shown how to do text align to the right side.</p>
+		<p class="align-center">It's a text, which I've also prepared for Task-1, but here will be the third part of the task. Here will be shown how 
+		to do text align to the center. It's a text, which I've also prepared for Task-1, but here will be the third part of the task. Here will be 
+		shown how to do text align to the center. It's a text, which I've also prepared for Task-1, but here will be the third part of the task. 
+		Here will be shown how to do text align to the center.</p>
+		<p align="justify">It's a text, which I've also prepared for Task-1, but here will be the fourth part of the task. Here will be shown how 
+		to do text align to the left and right sides at one time. I've written here some text only to use more words. It's a text, which I've also 
+		prepared for Task-1, but here will be the fourth part of the task. Here will be shown how to do text align to the left and right sides at 
+		one time. I've written here some text only to use more words. It's a text, which I've also prepared for Task-1, but here will be the fourth 
+		part of the task. Here will be shown how to do text align to the left and right sides at one time. I've written here some text only to use 
+		more words.</p>
 	</body>
-	
 </html>
