--- a/Task1.html
+++ b/Task1.html
@@ -1,43 +1,32 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>PAGE FOR TASK 1</title>
-		<meta charset="UTF-8">
-		<style>
-			.underline{
-				text-decoration: underline;
-			}
-			.linethrough{
-				text-decoration: line-through;
-			}
-			.align-center{
-				text-align: center;
-			}
-			.align-right{
-				text-align: right;
-			}
-		</style>
-	</head>
-	
-	<body>
-		<h1 class="align-center">TASK 1</h1>
-		<hr/>
-		<p>It's a text, that I've prepared for Task-1. This sentence is used for example of <strong>bold</strong> style of words. This sentence is used 
-		for example of <em>curve</em> style of words. This sentence is used for example of <a class="underline">underlined</a> style of words. And this 
-		sentence is used for example of <a class="linethrough">NOT</a> linedthrough style of words.</p>
-		<p class="align-right">It's a text, which I've also prepared for Task-1, but here will be the second part of the task. Here will be shown how 
-		to do text align to the right side. It's a text, which I've also prepared for Task-1, but here will be the second part of the task. Here will be
-		shown how to do text align to the right side. It's a text, which I've also prepared for Task-1, but here will be the second part of the task. 
-		Here will be shown how to do text align to the right side.</p>
-		<p class="align-center">It's a text, which I've also prepared for Task-1, but here will be the third part of the task. Here will be shown how 
-		to do text align to the center. It's a text, which I've also prepared for Task-1, but here will be the third part of the task. Here will be 
-		shown how to do text align to the center. It's a text, which I've also prepared for Task-1, but here will be the third part of the task. 
-		Here will be shown how to do text align to the center.</p>
-		<p align="justify">It's a text, which I've also prepared for Task-1, but here will be the fourth part of the task. Here will be shown how 
-		to do text align to the left and right sides at one time. I've written here some text only to use more words. It's a text, which I've also 
-		prepared for Task-1, but here will be the fourth part of the task. Here will be shown how to do text align to the left and right sides at 
-		one time. I've written here some text only to use more words. It's a text, which I've also prepared for Task-1, but here will be the fourth 
-		part of the task. Here will be shown how to do text align to the left and right sides at one time. I've written here some text only to use 
-		more words.</p>
-	</body>
+<head>
+	<meta charset="UTF-8">
+	<title>Lesson#2 Task1</title>
+	<style>
+		.align-center{
+			text-align: center;
+		}
+	</style>
+</head>
+
+<body>
+	<h1 class="align-center">Task 1</h1>
+	<hr/>
+	<div>
+		<p>The task of this part of the second <del>lesom</del> <ins>lesson</ins> is to get to know how
+		to use semantic tags. So, I decided to create some random text to show
+		how these tags work. You can see all of them in the current paragrah.
+		Thank you for the <dfn>attention</dfn>!! :)</p>
+		<p><code>cout << "It's a part of code" << endl;</code></p>
+		<p><samp>It's a result of input of the computer program or script</samp></p>
+		<p><kbd>It's a name of keys or inputing text by the keyboard</kbd></p>
+		<p><var>It's a variable</var></p>
+		<p><cite>It's a quote or link on the other material</cite></p>
+		<p><address>It's a contact information, which is contained in tag address</address></p>
+		<p><q>It's a short quote</q></p>
+		<p><blockquote>It's a long quote which is contained in tag blockquote. Tag q and blockquote have 
+		an attribute cite, which gets meaning of url to the quoting text.</blockquote></p>
+	</div>
+</body>
 </html>
