--- a/Task4.html
+++ b/Task4.html
@@ -1,26 +1,103 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>PAGE FOR TASK 4</title>
-		<meta charset="UTF-8">
-		<style>
-			.align-center{
-				text-align: center;
-			}
-		</style>
-	</head>
+<head>
+	<meta charset="UTF-8">
+	<title>Lesson#2 Task4</title>
+	<style>
+		.align-center{
+			text-align: center;
+		}
+	</style>
+</head>
 
-	<body>
-		<h1 class="align-center">Task 4</h1>
-		<hr/>
-		<a href="Task1.html">Task #1</a>
-		<br/>
-		<a href="Task2.html">Task #2</a>
-		<br/>
-		<a href="Task3.html">Task #3</a>
-		<br>
-		<a href="http://google.com.ua">Site of Google in current blank</a>
-		<br/>
-		<a href="http://gmail.com" target="_blank">Site of gmail in new blank</a>
-	</body>
+<body>
+	<h1 class="align-center">Task 4</h1>
+	<hr/>
+	<h2 class="align-center">Part 1</h2>
+	<div>
+		<ol>
+			<li><a href="Task1.html">Семантические теги</a></li>
+			<li><a href="Task2.html">Таблицы</a></li>
+			<li><a href="Task3.html">Формы</a></li>
+		</ol>
+	</div>
+	<hr/>
+	<h2 class="align-center">Part 2</h2>
+	<div>
+		<h3>Спутники некоторых планет</h3>
+		<ul>
+			<li>Земля
+				<ol start="1">
+					<li>Луна</li>
+				</ol>
+			</li>
+			<li>Марс
+				<ol start="2">
+					<li>Фобос</li>
+					<li>Деймос</li>
+				</ol>
+			</li>
+			<li>Уран
+				<ol start="4">
+					<li>Ариэль</li>
+					<li>Умбриэль</li>
+					<li>Титания</li>
+					<li>Оберон</li>
+					<li>Миранда</li>
+				</ol>
+			</li>
+			<li>Нептун
+				<ol start="9">
+					<li>Тритон</li>
+					<li>Нереида</li>
+				</ol>
+			</li>
+		</ul>
+	</div>
+	<hr/>
+	<h2 class="align-center">Part 3</h2>
+	<div>
+		<h3>Нобелевские лауреаты</h3>
+		<ol type="I">
+			<li><strong>Премия по химии</strong>
+				<ol start="1">
+					<li>АРРЕНИУС (Arrhenius), Сванте</li>
+					<li>ACTOH (Aston), Фрэнсис Уильям</li>
+					<li>БЕРГИУС (Bergius), Фридрих</li>
+					..........
+				</ol>
+				<ol start="30">
+					<li>ФИШЕР (Fischer), Эмиль</li>
+					<li>ЭЙЛЕР-ХЕЛЬПИН (Euler-Chelpin), Ханс Фон</li>
+					<li>ЮРИ (Urey), Гарольд К.</li>
+				</ol>
+			</li>
+			<li><strong>Премия по литературе</strong>
+				<ol start="1">
+					<li>БЕНАВЕНТЕ-И-МАРТИНЕС (Benavente y Martinez), Хасинто</li>
+					<li>БЕРГСОН (Bergson), Анри</li>
+					<li>БЬЕРНСОН (Bjerson), Бьеристерне</li>
+					..........
+				</ol>
+				<ol start="30">
+					<li>ШПИТТЕЛЕР (Splitteler), Карл</li>
+					<li>ЭЙКЕН (Eucken), Рудольф</li>
+					<li>ЭЧЕГАРАЙ (Echegaray), Хосе</li>
+				</ol>
+			</li><li><strong>Премия мира</strong>
+				<ol start="1">
+					<li>АССЕР (Asser), Тобиас</li>
+					<li>АРНОЛЬДСОН (Arnoldson), Клас</li>
+					<li>БАЙЕР (Bajer), Фредрик</li>
+					..........
+				</ol>
+				<ol start="25">
+					<li>САХАРОВ, Андрей</li>
+					<li>ФРИД (Fried), Альфред</li>
+				</ol>
+			</li>
+		</ol>
+	</div>
+	<hr/>
+</body>
 </html>
