Tasks 1-5 fixed, 6 task in progress

--- a/Lesson#3/Task1.html
+++ b/Lesson#3/Task1.html
@@ -10,14 +10,14 @@
   <h1 class="task1topic">Task 1: Селекторы</h1>
   <hr/>
   <p>
-    <a class="main-p-letter">П</a>оверхность Мохо несовершенна. Сталагмит <em class="greencurve">зеркально</em> отражает кризис. Аутизм<br/>
+    <a class="h1">П</a>оверхность Мохо несовершенна. Сталагмит <em class="greencurve">зеркально</em> отражает кризис. Аутизм<br/>
     притягивает гомеостаз. Распостранение вулканов осознаёт экспериментальный<br/>
     ортоклаз. Наш современник стал особенно чутко относиться к слову, однако<br/>
     психоанализ значительно иллюстрирует интеграл Гамильтона, как и преполагалось.<br/>
     Денуданция <em class="greencurve">положительна</em>.
   </p>
   <p>
-    <a class="main-p-letter">М</a>еханизм власти фактически означает механизм власти.<em class="greencurve">Очевидно</em>, что упаривание<br/>
+    <a class="h1">М</a>еханизм власти фактически означает механизм власти. <em class="greencurve">Очевидно</em>, что упаривание<br/>
     теоритически катализирует полимолекулярный ассоциат. Мицелла лимитировано<br/>
     возбуждает диэтиловый эфир. Политическая психология гомологична. Впервые<br/>
     газовые гидраты были описаны Гемфри Дэви в 1810 году, <em class="greencurve">однако</em> унитарное<br/>
