--- a/Lesson#3/Task4.html
+++ b/Lesson#3/Task4.html
@@ -13,8 +13,8 @@
   <li><a class="blue" href="http://mysite.main.com">Главная</a></li>
   <li><a class="blue" href="http://mysite.news.com">Новости</a></li>
   <li><a class="orange" href="http://yandex.ru">Яндекс</a></li>
-  <li><a class="orange" herf="http://mail.yandex.ru">Яндекс.Почта</a></li>
   <li><a class="orange" href="http://mail.yandex.ru">Яндекс.Почта</a></li>
+  <li><a class="orange" target="_blank" href="http://mail.yandex.ru">Яндекс.Почта&#8689;</a></li>
   <li><a class="grey" href="http://google.com">Google</a></li>
   <li><a class="grey" href="http://google.maps.com">Google Maps</a></li>
   <li><a class="grey" href="http://google.news.com">Google News</a></li>
